<resources>
    <string name="app_name">SergeyBalakinTestTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geo_text">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="new_string">New</string>
    <string name="best_seller">Best Seller</string>
    <string name="computer">Computer</string>
    <string name="phone">Phone</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="unknown">Unknown</string>
</resources>