<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_16" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:layout_marginEnd="@dimen/margin_8"
            android:scaleType="center"
            android:src="@drawable/ic_geo"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:ellipsize="none"
            android:maxEms="16"
            android:singleLine="true"
            android:text="@string/geo_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:layout_marginStart="@dimen/margin_8"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <ImageView
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:layout_marginTop="@dimen/margin_8"
            android:src="@drawable/ic_filter_icon"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sectionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18"
            android:text="@string/select_category"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/moreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/view_all"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/sectionTitleTextView"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@+id/sectionTitleTextView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/search_shape"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/sectionTitleTextView">

            <ImageView
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_24"
                android:background="@color/white"
                android:scaleType="center"
                android:src="@drawable/ic_search_icon" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:paddingVertical="@dimen/margin_8"
                android:textCursorDrawable="@drawable/cursor_edittext"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/round_shape_orange"
            android:scaleType="center"
            android:src="@drawable/ic_qr_code_icon"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/sectionTitleTextView" />

        <TextView
            android:id="@+id/hotSalesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/hot_sales"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/sectionTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/hotSalesTextView"
            app:layout_constraintEnd_toEndOf="@+id/moreTextView"
            app:layout_constraintTop_toTopOf="@+id/hotSalesTextView" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/bestSellerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/hotSalesTextView" />

        <TextView
            android:id="@+id/bestSellerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18"
            android:text="@string/best_seller"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/sectionTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/bestSellerRecyclerView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/bestSellerTextView"
            app:layout_constraintEnd_toEndOf="@+id/moreTextView"
            app:layout_constraintTop_toTopOf="@+id/bestSellerTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/bestSellerTextView"
            tools:itemCount="4"
            tools:listitem="@layout/item_best_seller" />
        <!--            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"-->
        <!--            app:spanCount="2"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>